--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <!-- <script src="https://static.line-scdn.net/liff/edge/versions/2.2.0/sdk.js"></script> -->
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.2.0/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
@@ -77,12 +77,26 @@
     }
 
     function getEnvironment() {
+      document.getElementById("os").append(liff.getOS())
+      document.getElementById("os").append(liff.getLanguage())
+      document.getElementById("os").append(liff.getVersion())
+      document.getElementById("os").append(liff.getAccessToken())
+      document.getElementById("os").append(liff.isInClient())
+      if (liff.isInClient()) {
+        document.getElementById("btnLogOut").style.display = "none"
+      } else {
+        document.getElementById("btnMsg").style.display = "none"
+        document.getElementById("btnScanCode").style.display = "none"
+        document.getElementById("btnClose").style.display = "none"
+      }
+
+
+
     }
 
     async function main() {
-      alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
-      // getEnvironment()
+      await liff.init({ liffId: "1654444182-O7lMmPn5" })
+      getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
