--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
 
     async function main() {
       await liff.init({ liffId: "1654444182-O7lMmPn5" })
-      getEnvironment()
+      liff.ready.then(() => {
+      if (liff.isLoggedIn()) {
+        getEnvironment()
+      } else {
+        liff.login();
+      }
+    });
+      
       // getUserProfile()
       // getContext()
       // getFriendship()
