--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     }
 
     async function main() {
-      await liff.init({ liffId: "1654444182-O7lMmPn5" })
+      await liff.init({ liffId: "1654472250-V0dbAraD" })
       liff.ready.then(() => {
         if (liff.isLoggedIn()) {
           getEnvironment()
