--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
-
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My LIFF App</title>
-  </head>
-  <body>
-    <p id="scanCode"></p>
-    <p>
-      <button id="btnScanCode" onclick="scanCode();">Scan Code</button>
-    </p>
-    <script src="https://static.line-scdn.net/liff/edge/2.1/liff.js"></script>
-    <script>
-      function scanCode() {
-        liff.scanCode().then(result => {
-          const stringifiedResult = JSON.stringify(result);
-          alert(stringifiedResult);
-          document.getElementById("scanCode").textContent = stringifiedResult;
-        });
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>LIFF - LINE Front-end Framework</title>
+  <style>
+    body { margin: 16px }
+    button, img { display: none; width: 40% }
+    button { padding: 16px }
+  </style>
+</head>
+<body>
+  <h1>Page 2</h1>
+  <img id="pictureUrl">
+  <button id="btnLogIn" onclick="logIn()">Log In</button>
+  <button id="btnLogOut" onclick="logOut()">Log Out</button>
+  <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+  <script>
+    function logOut() {
+      liff.logout()
+      window.location.reload()
+    }
+    function logIn() {
+      liff.login({ redirectUri: window.location.href })
+    }
+    async function getUserProfile() {
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").style.display = "block"
+      document.getElementById("pictureUrl").src = profile.pictureUrl
+    }
+    async function main() {
+      await liff.init({ liffId: "1654472250-V0dbAraD" })
+      if (liff.isInClient()) {
+        getUserProfile()
+      } else {
+        if (liff.isLoggedIn()) {
+          getUserProfile()
+          document.getElementById("btnLogIn").style.display = "none"
+          document.getElementById("btnLogOut").style.display = "block"
+        } else {
+          document.getElementById("btnLogIn").style.display = "block"
+          document.getElementById("btnLogOut").style.display = "none"
+        }
       }
-      liff.init({ liffId: "1654472250-V0dbAraD" }, () => {}, err => console.error(err.code, error.message));
-    </script>
-  </body>
-  </html>
+    }
+    main()
+  </script>
+</body>
+</html>
