--- a/index.html
+++ b/index.html
@@ -1,50 +1,35 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LIFF - LINE Front-end Framework</title>
-  <style>
-    body { margin: 16px }
-    button, img { display: none; width: 40% }
-    button { padding: 16px }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My LIFF App</title>
 </head>
+
 <body>
-  <h1>Page 2</h1>
-  <img id="pictureUrl">
-  <button id="btnLogIn" onclick="logIn()">Log In</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
-  <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+  <p id="scanCode"></p>
+  <p>
+    <button id="btnScanCode" onclick="scanCode();">Scan Code</button>
+  </p>
+  <script src="https://static.line-scdn.net/liff/edge/2.1/liff.js"></script>
   <script>
-    function logOut() {
-      liff.logout()
-      window.location.reload()
-    }
-    function logIn() {
-      liff.login({ redirectUri: window.location.href })
-    }
     async function getUserProfile() {
-      const profile = await liff.getProfile()
-      document.getElementById("pictureUrl").style.display = "block"
-      document.getElementById("pictureUrl").src = profile.pictureUrl
+      const profile = await liff.getProfile();
+      document.getElementById('pictureUrl').src = profile.pictureUrl;
+      document.getElementById('userId').append(profile.userId);
+      document.getElementById('statusMessage').append(profile.statusMessage);
+      document.getElementById('displayName').append(profile.displayName);
+      document.getElementById('email').append(liff.getDecodedIDToken().email);
     }
     async function main() {
-      await liff.init({ liffId: "1654472250-V0dbAraD" })
-      if (liff.isInClient()) {
-        getUserProfile()
+      await liff.init({ liffId: '1654472250-V0dbAraD' });
+      if (liff.isLoggedIn()) {
+        getUserProfile();
       } else {
-        if (liff.isLoggedIn()) {
-          getUserProfile()
-          document.getElementById("btnLogIn").style.display = "none"
-          document.getElementById("btnLogOut").style.display = "block"
-        } else {
-          document.getElementById("btnLogIn").style.display = "block"
-          document.getElementById("btnLogOut").style.display = "none"
-        }
+        liff.login();
       }
     }
-    main()
   </script>
 </body>
+
 </html>
