--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My LIFF App</title>
+  <script src="https://static.line-scdn.net/liff/edge/2.1/liff.js"></script>
 </head>
 
 <body>
-  <p id="scanCode"></p>
-  <p>
-    <button id="btnScanCode" onclick="scanCode();">Scan Code</button>
-  </p>
-  <script src="https://static.line-scdn.net/liff/edge/2.1/liff.js"></script>
+<div style="text-align: center; display: block; margin: 0 auto;">
+    <img id="pictureUrl">
+    <p id="userId"><b>UserId:</b><br></p>
+    <p id="displayName"><b>DisplayName:</b><br></p>
+    <p id="statusMessage"><b>StatusMessage:</b><br></p>
+    <p id="email">Email:<br></p>
+  </div>
+  <div>
+    <button id="btnLogOut" (click)="logOut()">Log Out</button>
+  </div>
   <script>
     async function getUserProfile() {
       const profile = await liff.getProfile();
