--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     async function main() {
       // alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "1654472250-V0dbAraD" })
+      await liff.init({ liffId: "1654472250-bl9vla1R" })
       if (liff.isLoggedIn()) {
         this.getUserProfile();
       } else {
