--- a/index.html
+++ b/index.html
@@ -1,106 +1,196 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>My LIFF app</title>
-  <link rel="stylesheet" href="css/style.css" media="all">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nayhoi Camera</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/6e252eb4a7.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <style>
+
+    </style>
 </head>
 
 <body>
-  <p id="os"><b>OS:</b> </p>
-  <p id="language"><b>Language:</b> </p>
-  <p id="version"><b>Version:</b> </p>
-  <p id="isInClient"><b>isInClient:</b> </p>
-  <p id="accessToken"><b>AccessToken:</b> </p>
-  <img id="pictureUrl">
-  <p id="userId"><b>userId:</b> </p>
-  <p id="displayName"><b>displayName:</b> </p>
-  <p id="statusMessage"><b>statusMessage:</b> </p>
-  <p id="decodedIDToken"><b>email:</b> </p>
-  <p id="type"><b>type:</b> </p>
-  <p id="viewType"><b>viewType:</b> </p>
-  <p id="utouId"><b>utouId:</b> </p>
-  <p id="roomId"><b>roomId:</b> </p>
-  <p id="groupId"><b>groupId:</b> </p>
-  <p id="friendship"><b>isFriendship:</b> </p>
-  <p id="scanCode"><b>Code:</b> </p>
-  <p id="isLoggedIn"><b>isLoggedIn:</b> </p>
-  <p id="universalLink1"><b>Universal Link:</b> </p>
-  <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
-  <p><a href="liff/path/?param=9">Link to Path</a></p>
+    <!-- Navbar -->
+    <!-- Image and text -->
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">
+            <img src="./img/Line-icon.png" width="40x" alt=""> NAYHOI CAMERA
+        </a>
+    </nav>
+    <!-- End navbar -->
+    <!-- Carousel -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="./img/slide.svg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="./img/slide.svg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="./img/slide.svg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- End Carousel -->
+    <!-- Start Container -->
+    <div class="container-fluid">
+        <div class="col-md-12">
 
-  <button id="btnMsg" onclick="sendMsg()">Send Message</button>
-  <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
-  <button onclick="openWindow()">Open Window</button>
-  <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
-  <button id="btnClose" onclick="closed()">Close</button>
+            <div class="row">
+                <div class="header">
+                    <h5>ค้นหาช่างภาพของคุณ</h5>
+                </div>
+            </div>
 
-  <!-- <script src="js/vconsole.min.js"></script> -->
-  <!-- <script>
-    var vConsole = new VConsole()
-    console.log("Hello World!")
-  </script> -->
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-2">
+                            <!-- Icon -->
+                            <i class="fas fa-camera-retro"></i>
+                        </div>
+                        <div class="col-10">
+                            ประเภทงาน
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-2">
+                            <!-- Icon -->
+                            <i class="far fa-calendar-alt"></i>
+                        </div>
+                        <div class="col-10">
+                            วันและช่วงเวลาถ่ายภาพ
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-2">
+                            <!-- Icon -->
+                            <i class="fas fa-map-marker-alt"></i>
+                        </div>
+                        <div class="col-10">
+                            สถานที่ถ่ายภาพ
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary saerch"><i class="fas fa-search"> ค้นหา</i></button>
+        </div>
+    </div>
+    </div>
+    <!-- End Container  -->
 
-  <script src="https://static.line-scdn.net/liff/edge/versions/2.2.0/sdk.js"></script>
-  <script>
-    function createUniversalLink() {
-    }
+    <!-- Start Body List -->
+    <div class="container-fluid">
+        <div class="col-md-12">
 
-    async function shareMsg() {
-    }
+            <div class="row">
+                <div class="header">
+                    <h5>ค้นหาช่างภาพของคุณ</h5>
+                </div>
+            </div>
+            <div class="row mx-auto">
+                <center>
+                    <img src="./img/img_avatar.png" style="border-radius: 50%;" class="img-fluid" alt="Avatar"
+                        style="width:200px">
+                    <img src="./img/img_avatar.png" style="border-radius: 50%;" class="img-fluid" alt="Avatar"
+                        style="width:200px">
+                    <img src="./img/img_avatar.png" style="border-radius: 50%;" class="img-fluid" alt="Avatar"
+                        style="width:200px">
+                    <img src="./img/img_avatar.png" style="border-radius: 50%;" class="img-fluid" alt="Avatar"
+                        style="width:200px">
+                    <img src="./img/img_avatar.png" style="border-radius: 50%;" class="img-fluid" alt="Avatar"
+                        style="width:200px">
+                </center>
+            </div>
 
-    function logOut() {
-    }
+        </div>
+    </div>
+    <!-- End Body List -->
 
-    function closed() {
-    }
+    <!-- ่ช่างภาพตามประเภทงาน -->
+    <div class="container-fluid">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="header">
+                    <h5>ค้นหาช่างภาพตามประเภทงาน</h5>
+                </div>
+            </div>
+            <div class="alert alert-danger" role="alert">
+                ถ่ายรูปรับปริญญา
+            </div>
+            <div class="alert alert-warning" role="alert">
+                ถ่ายรูปรับปริญญานอกรอบ
+            </div>
+        </div>
+    </div>
+    <!-- ่ช่างภาพตามประเภทงาน -->
 
-    async function scanCode() {
-    }
+    <footer class="footer">
+        <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
+            <button id="home" type="button" class="btn btn-secondary button-active">
+                <div class="selector-holder">
+                    <i class="fas fa-home"></i>
+                    <span>หน้าหลัก</span>
+                </div>
+            </button>
+            <button id="feed" type="button" class="btn btn-secondary button-inactive">
+                <div class="selector-holder">
+                    <i class="far fa-calendar-alt"></i>
+                    <span>การจอง</span>
+                </div>
+            </button>
+            <button id="create" type="button" class="btn btn-secondary button-inactive">
+                <div class="selector-holder">
+                    <i class="fas fa-sms"></i>
+                    <span>ข้อความ</span>
+                </div>
+            </button>
+            <button id="account" type="button" class="btn btn-secondary button-inactive">
+                <div class="selector-holder">
+                    <i class="fas fa-bell"></i>
+                    <span>แจ้งเตือน</span>
+                </div>
+            </button>
+            <button id="account" type="button" class="btn btn-secondary button-inactive">
+                <div class="selector-holder">
+                    <i class="fas fa-address-card"></i>
+                    <span>โปรไฟล์</span>
+                </div>
+            </button>
+        </div>
+    </footer>
 
-    function openWindow() {
-    }
-
-    async function getFriendship() {
-    }
-
-    async function sendMsg() {
-    }
-
-    function getContext() {
-    }
-
-    async function getUserProfile() {
-      const profile = await liff.getProfile();
-      document.getElementById('pictureUrl').src = profile.pictureUrl;
-      document.getElementById('userId').append(profile.userId);
-      document.getElementById('statusMessage').append(profile.statusMessage);
-      document.getElementById('displayName').append(profile.displayName);
-      document.getElementById('email').append(liff.getDecodedIDToken().email);
-    }
-
-    function getEnvironment() {
-    }
-
-    async function main() {
-      // alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "1654472250-bl9vla1R" })
-      if (liff.isLoggedIn()) {
-        this.getUserProfile();
-      } else {
-        liff.login();
-      }
-      // getEnvironment()
-      // getUserProfile()
-      // getContext()
-      // getFriendship()
-      // createUniversalLink()
-    }
-    main()
-  </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
